iac-modules/extensions/vllm-32b/v0.9-v1/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vllm-32b
  namespace: vllm-32b
spec:
  parentRefs:
    - name: main
      namespace: kgateway-system
  hostnames:
    - "inference-32b.prod.internal"
  rules:
    - backendRefs:
        - name: vllm-32b
          port: 8000
